# Infraforge-5000

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
ansible/playbooks/: bind9-server.yml  custom-bashrc.yml  deploy-monitoring.yml  deploy-ssh-key.yml  harden-ssh.yml  install-claude-code.yml  update-packages.yml
ansible/playbooks/files/: infraforge-prompt.sh
config/: config.example.yaml
docker/: .env.example  docker-compose.yml
docker/phpipam/: apache-ssl-phpipam.conf  bootstrap-ipam.sh  config-override.php  generate-ssl.sh
docker/phpipam/initdb/: 01-schema.sql  02-infraforge-bootstrap.sh
infraforge/: __init__.py  __main__.py  ai_client.py  ai_context.py  ansible_parser.py  ansible_runner.py  app.py  cloudflare_client.py  config.py  credential_manager.py  dns_client.py  host_enrichment.py  ipam_client.py  models.py  module_status.py  preferences.py  proxmox_client.py  proxmox_progress.py  setup_wizard.py  ssh_helper.py  template_package.py  terraform_manager.py  updater.py
infraforge/screens/: __init__.py  ai_chat_modal.py  ai_settings_screen.py  ansible_run_modal.py  ansible_screen.py  dashboard.py  dns_cloudflare_tab.py  dns_screen.py  dns_server_wizard.py  help_screen.py  ipam_screen.py  new_vm.py  node_info.py  provision_menu.py  setup_modals.py  setup_screen.py  ssh_setup_modal.py  template_detail.py  template_download_screen.py  template_export_screen.py  template_import_screen.py  template_list.py  template_update_screen.py  version_list_screen.py  vm_detail.py  vm_list.py
infraforge/widgets/: __init__.py
styles/: app.tcss
terraform/: .gitignore
